--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center;color: white; }
+    .attribution a { color: hsl(228, 45%, 44%); accent-color: white; }
   </style>
 
   <link rel="stylesheet" href="/css/style.css">
@@ -22,18 +22,18 @@
   <div class="card">
     <img src="/images/image-equilibrium.jpg" alt="">
     <h1>Equilibrium #3429</h1>
-    <p>Our Equilibrium collection promotes balance and calm.</p>
+    <p>Our Equilibrium collection promotes <br> balance and calm.</p>
     <div class="price">
       <div class="eth-price">
         <img src="/images/icon-ethereum.svg" alt="">
-        <p>0.041ETH</p>
+        <span>0.041ETH</span>
       </div>
       <div class="day">
         <img src="/images/icon-clock.svg" alt="">
-        <p>3 days left</p>
+        <span>3 days left</span>
       </div>
     </div>
-    <br>
+    <hr>
     <div class="avatar">
       <img src="/images/image-avatar.png" alt="">
       <span>Creation of Jules Wyvern</span>
@@ -42,7 +42,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Auntapza</a>.
   </div>
 </body>
 </html>
